[gd_scene load_steps=21 format=2]

[ext_resource path="res://main/game/game.gd" type="Script" id=1]
[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://main/game/players.gd" type="Script" id=3]
[ext_resource path="res://main/game/level_layout/red_blocks.tscn" type="PackedScene" id=4]
[ext_resource path="res://main/game/level_layout/blue_blocks.tscn" type="PackedScene" id=5]
[ext_resource path="res://main/game/level_layout/yellow_blocks.tscn" type="PackedScene" id=6]
[ext_resource path="res://main/game/level_layout/green_blocks.tscn" type="PackedScene" id=7]
[ext_resource path="res://main/game/level_layout/block_compound.gd" type="Script" id=8]
[ext_resource path="res://main/game/bomb_destroy_zone.gd" type="Script" id=9]
[ext_resource path="res://assets/fonts/main-font-32.tres" type="DynamicFont" id=10]
[ext_resource path="res://main/game/score_label.gd" type="Script" id=11]
[ext_resource path="res://main/game/hud.gd" type="Script" id=12]
[ext_resource path="res://main/game/match_timer.gd" type="Script" id=13]
[ext_resource path="res://assets/sounds/soon_timeout_tick.wav" type="AudioStream" id=14]

[sub_resource type="Animation" id=1]
resource_name = "soon_timeout"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("scale_pivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../../timer_tick_sfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 440, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 88, 264 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 88, 256 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 96, 264 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 800, 160 )

[node name="Game" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 12 )

[node name="root" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="HUD/root"]
margin_right = 480.0
margin_bottom = 56.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="points_p1" type="Label" parent="HUD/root"]
modulate = Color( 0.941176, 0.941176, 0.941176, 1 )
margin_left = 16.0
margin_right = 94.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 10 )
text = "White Ship
0"
align = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
original_text = "White Ship
%s"

[node name="points_p2" type="Label" parent="HUD/root"]
modulate = Color( 0.941176, 0.941176, 0.941176, 1 )
anchor_right = 0.025
margin_left = 384.0
margin_right = 452.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 10 )
text = "Black Ship
0"
align = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
original_text = "Black Ship
%s"

[node name="scale_pivot" type="Node2D" parent="HUD/root"]
position = Vector2( 240, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="match_timer" type="Label" parent="HUD/root/scale_pivot"]
margin_left = -240.0
margin_top = -16.0
margin_right = 240.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 10 )
text = "2:00"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/root"]
anims/soon_timeout = SubResource( 1 )

[node name="Background" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="sky" type="ColorRect" parent="Background"]
margin_right = 480.0
margin_bottom = 550.0
color = Color( 0.560784, 0.607843, 0.964706, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Terrain" type="Node2D" parent="."]
position = Vector2( 0, -83 )
__meta__ = {
"_edit_lock_": true
}

[node name="green" parent="Terrain" instance=ExtResource( 7 )]
collision_layer = 16
script = ExtResource( 8 )
level = 1

[node name="yellow" parent="Terrain" instance=ExtResource( 6 )]
collision_layer = 16
script = ExtResource( 8 )
level = 2

[node name="red" parent="Terrain" instance=ExtResource( 4 )]
collision_layer = 16
script = ExtResource( 8 )
level = 3

[node name="blue" parent="Terrain" instance=ExtResource( 5 )]
collision_layer = 2147483664
script = ExtResource( 8 )
level = 4

[node name="basis" type="StaticBody2D" parent="Terrain"]
position = Vector2( 380, 593 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/basis"]
shape = SubResource( 2 )

[node name="Bombs" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Triggers" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerFlipDirection" type="Area2D" parent="Triggers"]
visible = false
collision_layer = 8
collision_mask = 8
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="1" type="CollisionShape2D" parent="Triggers/PlayerFlipDirection"]
position = Vector2( -88, 264 )
shape = SubResource( 3 )

[node name="2" type="CollisionShape2D" parent="Triggers/PlayerFlipDirection"]
position = Vector2( 568, 256 )
shape = SubResource( 4 )

[node name="BombDestroyZone" type="Area2D" parent="Triggers"]
visible = false
collision_layer = 8
collision_mask = 8
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="1" type="CollisionShape2D" parent="Triggers/BombDestroyZone"]
position = Vector2( -112, 264 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="2" type="CollisionShape2D" parent="Triggers/BombDestroyZone"]
position = Vector2( 912, 264 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="3" type="CollisionShape2D" parent="Triggers/BombDestroyZone"]
position = Vector2( 384, 680 )
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Players" type="Node2D" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
left_pos = -50
right_pos = 530

[node name="1" parent="Players" instance=ExtResource( 2 )]
position = Vector2( 440, 80 )
initial_direction = Vector2( -1, 0 )
player_id = 1
is_human = true

[node name="2" parent="Players" instance=ExtResource( 2 )]
position = Vector2( 40, 108 )
initial_direction = Vector2( 1, 0 )
player_id = 2

[node name="timer_tick_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "Sound"

[node name="MatchTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
script = ExtResource( 13 )
[connection signal="game_started" from="." to="MatchTimer" method="start"]
[connection signal="area_entered" from="Terrain/green" to="Terrain/green" method="_on_area_entered"]
[connection signal="block_destroyed" from="Terrain/green" to="." method="_on_Block_destroyed"]
[connection signal="area_entered" from="Terrain/yellow" to="Terrain/yellow" method="_on_area_entered"]
[connection signal="block_destroyed" from="Terrain/yellow" to="." method="_on_Block_destroyed"]
[connection signal="area_entered" from="Terrain/red" to="Terrain/red" method="_on_area_entered"]
[connection signal="block_destroyed" from="Terrain/red" to="." method="_on_Block_destroyed"]
[connection signal="area_entered" from="Terrain/blue" to="Terrain/blue" method="_on_area_entered"]
[connection signal="block_destroyed" from="Terrain/blue" to="." method="_on_Block_destroyed"]
[connection signal="body_entered" from="Triggers/PlayerFlipDirection" to="Players" method="_on_PlayerFlipDirection_body_entered"]
[connection signal="area_entered" from="Triggers/BombDestroyZone" to="Triggers/BombDestroyZone" method="_on_area_entered"]
[connection signal="update_points" from="Players/1" to="HUD" method="_on_P1_update_points"]
[connection signal="update_points" from="Players/2" to="HUD" method="_on_P2_update_points"]
[connection signal="soon_timeout" from="MatchTimer" to="HUD/root/AnimationPlayer" method="play" binds= [ "soon_timeout" ]]
[connection signal="timeout" from="MatchTimer" to="." method="end_game"]
[connection signal="update_time" from="MatchTimer" to="HUD" method="_on_MatchTimer_update_time"]
