[gd_scene load_steps=13 format=2]

[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/game/game.gd" type="Script" id=3]
[ext_resource path="res://assets/paper-texture-small.png" type="Texture" id=4]
[ext_resource path="res://assets/ground.png" type="Texture" id=5]
[ext_resource path="res://main/game/scripts/obstacle_manager.gd" type="Script" id=6]
[ext_resource path="res://libs/gt_points/gt_points.gd" type="Script" id=7]
[ext_resource path="res://libs/gt_pattern_label/gt_pattern_label.gd" type="Script" id=8]
[ext_resource path="res://assets/m6x11-s64-o8.tres" type="DynamicFont" id=9]
[ext_resource path="res://menus/menus/initial_menu.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1280, 160 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 640, 2560 )

[sub_resource type="Animation" id=3]
length = 4.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Level/GroundSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 960 ), Vector2( -2560, 960 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="InitialMenu" parent="." instance=ExtResource( 10 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="root" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="top_center" type="HBoxContainer" parent="UI/root"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 30.0
margin_right = 20.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="ScoreLabel" type="Label" parent="UI/root/top_center"]
margin_right = 28.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 9 )
text = "0"
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}
pattern_text = "%s"

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1280, 1280 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 480 )

[node name="Level" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Obstacles" type="Node2D" parent="Level"]
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ground" type="StaticBody2D" parent="Level"]
position = Vector2( 640, 1120 )
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Ground"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PipeKill" type="Area2D" parent="Level" groups=[
"pipe_kill",
]]
position = Vector2( -1280, 640 )
collision_layer = 8
collision_mask = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/PipeKill"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Foreground" type="Sprite" parent="Level"]
position = Vector2( 0, 960 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1280, 320 )
__meta__ = {
"_edit_lock_": true
}

[node name="GroundSprite" type="Sprite" parent="Level"]
position = Vector2( 0, 960 )
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 3840, 320 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnTimer" type="Timer" parent="Level"]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "loop"
anims/loop = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 640 )
current = true

[node name="PointsManager" type="Node" parent="."]
script = ExtResource( 7 )
[connection signal="player_died" from="." to="Level/SpawnTimer" method="stop"]
[connection signal="player_died" from="." to="Level/Obstacles" method="stop_pipes"]
[connection signal="player_died" from="." to="InitialMenu" method="emit_signal" binds= [ "player_died" ]]
[connection signal="player_died" from="." to="AnimationPlayer" method="stop"]
[connection signal="die" from="Player" to="." method="emit_signal" binds= [ "player_died" ]]
[connection signal="gained_point" from="Player" to="PointsManager" method="gain_points" binds= [ 1 ]]
[connection signal="timeout" from="Level/SpawnTimer" to="Level/Obstacles" method="spawn"]
[connection signal="points_gained" from="PointsManager" to="." method="gained_points"]
[connection signal="points_updated" from="PointsManager" to="UI/root/top_center/ScoreLabel" method="apply_text_simple"]
